[package]
name = "octane"
version = "0.1.0"
authors = ["Jonas Schievink <jonasschievink@gmail.com>"]
# TODO: Write description
#description = ""
documentation = "https://docs.rs/octane/"
repository = "https://github.com/jonas-schievink/octane.git"
# TODO: Add up to 5 keywords
#keywords = []
# TODO: Add categories
#categories = []
readme = "README.md"

[dependencies]
xbe = "0.1.1"
bitflags = "1.0.3"
log = "0.4.3"
env_logger = "0.5.11"
structopt = "0.2.10"
bitpat = "0.1.1"
num-traits = "0.2.5"
num-derive = "0.2.2"
termcolor = "1.0.1"
memmap = "0.6.2"
generational-arena = "0.1.0"

[dependencies.gdbstub]
git = "https://github.com/jonas-schievink/gdbstub.git"
rev = "36b2838ada2015d449c93e1e2946b1d9378e4781"

[dev-dependencies]
version-sync = "0.5"
criterion = "0.2.4"

[workspace]

[[bench]]
name = "decode"
harness = false

[profile.bench]
lto = "thin"

# cargo-release configuration
[package.metadata.release]
tag-message = "{{version}}"
no-dev-version = true
pre-release-commit-message = "Release {{version}}"

# Change the changelog's `Unreleased` section to refer to this release and
# prepend new `Unreleased` section
[[package.metadata.release.pre-release-replacements]]
file    = "CHANGELOG.md"
search  = "## Unreleased"
replace = "## Unreleased\n\nNo changes.\n\n## {{version}} - {{date}}"

# Bump the version inside the example manifest in `README.md`
[[package.metadata.release.pre-release-replacements]]
file    = "README.md"
search  = 'octane = "[a-z0-9\\.-]+"'
replace = 'octane = "{{version}}"'

# Bump the version referenced by the `html_root_url` attribute in `lib.rs`
[[package.metadata.release.pre-release-replacements]]
file    = "src/lib.rs"
search  = "https://docs.rs/octane/[a-z0-9\\.-]+"
replace = "https://docs.rs/octane/{{version}}"
